# serve

./: .gitignore
custom_handlers/: .env  README.md
custom_handlers/config/: config.properties
custom_handlers/pokegan/: README.md  pyproject.toml
custom_handlers/pokegan/src/: model.py  pokegan_handler.py
docker/: Dockerfile  dockerd-entrypoint.sh
pokegan/: README.md
pokegan/config/: config.properties
pokegan/src/: localutils.py  pokegan_handler.py  requirements.txt
